--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "framer-motion": "^11.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
-    "next": "15.0.0",
+    "next": "^16.1.2",
     "qrcode": "^1.5.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
